Fixes case in optimizer component where bottom part of Markowitz bullet extends past efficient frontier causing efficient frontier to jump down

--- a/src/components/about.module.css
+++ b/src/components/about.module.css
@@ -5,44 +5,41 @@
   left: 5%;
   border-radius: 3rem;
 }
-
 a {
   color: #096002;
   cursor: pointer;
 }
-.latex-image-d {
+
+/* Tutorial */
+.latex-image {
   filter: invert(100%);
-  margin-left: 0.5rem;
+}
+.latex-image-d {
   width: 8rem;
 }
 .latex-image-a {
-  filter: invert(100%);
-  margin-left: 0.5rem;
   width: 7rem;
 }
 .latex-image-st {
-  filter: invert(100%);
-  margin-left: 0.5rem;
   width: 11rem;
 }
 .latex-image-s {
-  filter: invert(100%);
-  margin-left: 0.5rem;
   width: 4.5rem;
 }
 .latex-image-s-calc {
-  filter: invert(100%);
-  margin-left: 0.5rem;
   width: 8.5rem;
-}
-.tutorial-img {
-  margin: 1rem;
 }
 
 /* Responsive */
 @media screen and (min-width: 750px) {
   .text-container {
     padding: 2rem 10rem;
+  }
+  .latex-image {
+    margin-left: 0.5rem;
+  }
+  .tutorial-img {
+    margin: 1rem;
   }
 }
 
@@ -51,5 +48,20 @@ a {
     text-align: center;
     padding: 1rem 1rem;
     margin-bottom: 2rem;
+  }
+  h2 {
+    margin-top: 2rem;
+  }
+  .tutorial-img {
+    margin: 1rem 0;
+  }
+  ol {
+    padding: 0;
+  }
+  li {
+    margin: 1rem 0;
+  }
+  ul {
+    padding: 0;
   }
 }
